feat: Add user module entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 #database
 quarkus.datasource.db-kind=postgresql
-quarkus.quarkus.datasource.db-version=17.1
 quarkus.datasource.username=ymoyamac
 quarkus.datasource.password=ymoyamac
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/mocadbdev
+quarkus.datasource.reactive.url=jdbc:postgresql://localhost:5432/mocadbdev
 
 #quarkus.hibernate-orm.database.generation=drop-and-create
