feat: Add get user by id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=ymoyamac
 quarkus.datasource.password=ymoyamac
-quarkus.datasource.reactive.url=jdbc:postgresql://localhost:5432/mocadbdev
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/mocadbdev
+quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/mocadbdev
 
 #quarkus.hibernate-orm.database.generation=drop-and-create
